--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,7 @@ build:
   ci:
     - echo 'CI Running'
     - export IMAGE_NAME=premnathtg/test-run1
-    -   post_ci:
+  post_ci:
     - ./build.sh
 
 branches:
