--- a/shippable.yml
+++ b/shippable.yml
@@ -4,8 +4,9 @@ build:
   ci:
     - echo 'CI Running'
     - export IMAGE_NAME=premnathtg/test-run1
-  post_ci:
     - ./build.sh
+  post_ci:
+    - echo 'success'
 
 branches:
   only:
