--- a/shippable.yml
+++ b/shippable.yml
@@ -4,6 +4,7 @@ build:
   ci:
     - echo 'CI Running'
     - export IMAGE_NAME=premnathtg/test-run1
+    - chmod 777 build.sh
     - ./build.sh
  
 branches:
