--- a/shippable.yml
+++ b/shippable.yml
@@ -5,6 +5,7 @@ build:
     - echo 'CI Running'
     - docker build -t premnathtg/test-docker:1 .
     - export IMAGE_NAME=680976004409.dkr.ecr.us-east-1.amazonaws.com/devimages
+    - yum -y install gearmand redis
     - chmod 777 build.sh
     - ./build.sh
   post_ci:
