--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
                                    
 build:
-  ci:
+  pre_ci:
     - echo 'CI Running'
     - export IMAGE_NAME=680976004409.dkr.ecr.us-east-1.amazonaws.com/devimages
     - chmod 777 build.sh
